--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -509,7 +509,8 @@
   display: flex;
   align-items: center;
   border-radius: 12px;
-  background: #f04e4e;
+  // background: #f04e4e;
+  background: #fb3c3c;
   box-shadow: inset 5px 5px 4px #d14444,
               inset -5px -5px 4px #ff5858;
   height: 70px;
@@ -1681,6 +1682,65 @@ margin-bottom: 20px;
     font-size: 14px;
     font-weight: 600;
   }
+}
+.tables-view{
+  position: absolute;
+  z-index: 5;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  // margin-left: 10px;
+  border-radius: 12px;
+  padding: 30px 0px;
+  &__text{
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+  &__row{
+    display: flex;
+  }
+  &__center{
+    display: flex;
+    justify-content: center;
+  }
+}
+.table-item{
+  // display: flex;
+  // justify-content: center;
+  // // width: 50px;
+  height: 50px;
+  // background-color: rgb(100, 49, 18);
+  // border-radius: 10px;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  // border-color: rgb(97, 51, 13);
+  border-left: 2px solid rgb(97, 51, 13);
+  border-right: 2px solid rgb(97, 51, 13);
+  border-top: 4px solid rgb(97, 51, 13);
+  margin: 10px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  cursor: pointer;
+  &__number{
+    // background: #707070;
+    width: 50%;
+    height: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2px;
+    color: black;
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+  }
+}
+.table-width{
+  width: 50%;
+  
 }
 //loading css
 // .lds-roller {
