--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -363,6 +363,7 @@
       font-weight: 600;
       display: flex;
       justify-content: space-between;
+      
     }
     &--info{
       font-weight: 300;
@@ -393,15 +394,55 @@
     color: black;    
 
   }
+  &--adopted{
+    color: #0011a8;
+    background: #5a67d6;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 4px 6px;
+  }
+  &--progress{
+    color: #777502;
+    background: #f0ed5f;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 4px 6px;
+  }
+  &--prepared{
+    color: #83063a;
+    background: #f0619c;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 4px 6px;
+  }
+  &--delivery{
+    color: #7e3000;
+    background: #fa7e30;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 4px 6px;
+  }
+  &--done{
+    color: #1f5a0d;
+    background: #81ca6a;
+    border-radius: 8px;
+    font-size: 14px;
+    font-weight: 600;
+    padding: 4px 6px;
+  }
   &--nodone{
     color: #ff3d3d;
   }
   &--preparing{
     color: rgb(55, 55, 219);
   }
-  &--done{
-    color: #2EAB09;
-  }
+  // &--done{
+  //   color: #2EAB09;
+  // }
 }
 .button-status{
   position: relative;
@@ -521,7 +562,6 @@
     color: white;
     margin-top: 4px;
     font-weight: 700;
-
   }
 }
 &__notification{
@@ -543,14 +583,17 @@
   left: 50%;
   transform: translate(-50%, -20%);
   z-index: 2;
-  // height: 80px;
+  height: 300px;
   padding-bottom: 20px;
   width: 90%;
   top: 15%;
   color: black;
-  background: white;
+  // background: rgb(153, 141, 143);
+  background: linear-gradient(#f7f7f7 30%, #fb4c4c 90%);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   border-radius: 12px;
+
+  overflow-y: scroll;
 }
 &__blik{
   position: fixed;
@@ -617,6 +660,7 @@
   &--text{
     color: #fd4f4f;
     font-weight: 600;
+    font-size: 20px;
   }
   &--none{
     margin-top: 8px;
@@ -1780,6 +1824,32 @@ margin-bottom: 20px;
     pointer-events: none;
     opacity: 0.5;
   }
+}
+.notification-content{
+ background: rgba(233, 231, 231, 0.452); 
+ margin: 10px;
+ border-radius: 10px;
+ box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
+
+&__right-corner{
+   display: flex;
+   justify-content: right;
+   padding-right: 8px;
+ }
+ &__text{
+   padding: 6px;
+   color: black;
+   font-weight: 300;
+   font-size: 16px;
+ }
+ &__time{
+   color: #707070;
+   font-weight: 600;
+   font-size: 14px;
+ }
+ &__header{
+   margin-top: 12px;
+ }
 }
 //loading css
 // .lds-roller {
