--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -296,41 +296,105 @@
     font-weight: 300 ;
   }
 }
-.red-board{
-  background: #ff3d3d;
-  border-radius: 10px;
-  color: white;
-  height: 120px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-  &__text{
-    text-align: center;
-  }
-  &__direction{
+// .red-board{
+//   background: #ff3d3d;
+//   border-radius: 10px;
+//   color: white;
+//   height: 120px;
+//   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+//   &__text{
+//     text-align: center;
+//   }
+//   &__direction{
+//     display: flex;
+//     flex-direction: row;
+//   }
+//   &__number{
+//     font-size: 34px;
+//     position:absolute;
+//     left: 50%;
+//     transform: translate(-50%,50%);
+//     font-weight: 600;
+//   }
+//   &__ball-items{
+//     display: flex;
+//     flex-direction: column;
+//     position: absolute;
+//     left: 90%;
+//     top: 20%;
+//     transform: translate(-45%, -90%);
+//   }
+//   &__ball{
+//     // background: white;
+//     height: 10px;
+//     width: 10px;
+//     margin: 2px 0px;
+//     border: 1px solid white;
+//     border-radius: 50%;
+//   }
+// }
+.statistics-board{
+  background: #ffffff;
+  border-radius: 12px;
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  overflow-x:scroll;
+  // box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px 0px inset;
+  background: #ffffff;
+  box-shadow: inset 3px 3px 10px #adadad,
+              inset -3px -3px 10px #d6d6d6;
+  &__column{
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 2px 0px;
   }
-  &__number{
-    font-size: 34px;
-    position:absolute;
-    left: 50%;
-    transform: translate(-50%,50%);
+  &__text{
+    font-size: 20px;
+    text-align: center;
     font-weight: 600;
+    padding-bottom: 4px;
   }
-  &__ball-items{
+  &__value{
+    font-weight: 600;
+    font-size: 16px;
+  }
+  &__direction{
+    padding: 5px 8px;
+    width: 100%;
+  }
+  &__circle{
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    height: 80px;
+    width: 80px;
+    background: #e9e9e9;
+    // border: 3px solid #fb3c3c;
+    box-shadow: rgba(180, 45, 45, 0.12) 0px 1px 3px, rgba(141, 12, 12, 0.24) 0px 1px 2px;
+    border-radius:50% ;
+    font-size: 45px;
+    color: #707070;
+    font-weight: 300;
+  }
+  &__item{
+    // background: wheat;
+    // width: 100%;
     display: flex;
-    flex-direction: column;
-    position: absolute;
-    left: 90%;
-    top: 20%;
-    transform: translate(-45%, -90%);
+    &--center{
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+    width: 100%;
+    // padding: 0px 20px;
   }
   &__ball{
-    // background: white;
-    height: 10px;
-    width: 10px;
-    margin: 2px 0px;
-    border: 1px solid white;
-    border-radius: 50%;
   }
 }
 .order{
@@ -367,6 +431,10 @@
     }
     &--info{
       font-weight: 300;
+    }
+    &--header{
+      text-align: right;
+      font-weight: 600;
     }
     &--blur{
       filter: blur(4px);
