--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -368,19 +368,29 @@
     padding: 5px 8px;
     width: 100%;
   }
+  &__header{
+    padding-bottom: 8px;
+  }
   &__circle{
     display: flex; 
     align-items: center;
     justify-content: center;
     height: 80px;
     width: 80px;
-    background: #e9e9e9;
+    // background: #e9e9e9;
+    background: #ffffff;
     // border: 3px solid #fb3c3c;
-    box-shadow: rgba(180, 45, 45, 0.12) 0px 1px 3px, rgba(141, 12, 12, 0.24) 0px 1px 2px;
+    box-shadow: rgba(180, 45, 45, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
     border-radius:50% ;
     font-size: 45px;
     color: #707070;
     font-weight: 300;
+    &--price{
+      font-size: 22px;
+      height: 120px;
+      width: 120px;
+
+    }
   }
   &__item{
     // background: wheat;
