--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2117,6 +2117,19 @@ justify-content: space-between;
    margin-top: 12px;
  }
 }
+.logout-admin{
+  top: 2%;
+  left: 80%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  cursor: pointer;
+  border-radius:50%;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+}
 //loading css
 // .lds-roller {
 //   display: inline-block;
